--- a/style-news.css
+++ b/style-news.css
@@ -75,7 +75,7 @@ body{
     font-style: normal;
     font-weight: 400;
     line-height: 160%;
-    margin: 0 0 20px 30px;
+    margin: 0 30px 20px 30px;
 }
 .text-box a{
     text-decoration: none;
