--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 .general-width {
     width: 80vw;
     margin-left: 10vw;
+    /*margin-right: 10vw;*/
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: "Josefin Sans", sans-serif;
@@ -39,9 +40,6 @@ ul, ol {
 
 /*---------------------Третья часть----------------------*/
 /*---------------------Четвертая часть-------------------*/
-body{
-    margin: 0;
-}
 .news>.general-width{
     height: 100vh;
     padding: 152px 0 141px 0;
