--- a/css/main.css
+++ b/css/main.css
@@ -72,12 +72,12 @@ ul, ol {
 .inner-box:nth-child(2){
     margin-right: 30px;
 }
-.inner-box>.text-box{
+.text-box{
     width: 25vw;
     height: 23vh;
     text-align: left;
 }
-.news>.general-width>h2{
+.h2-news{
     color: #000;
     font-size: 43px;
     font-style: normal;
@@ -85,7 +85,7 @@ ul, ol {
     line-height: 130%;
     margin-bottom: 20px;
 }
-.news>.general-width>p{
+.p-news{
     color: #000;
     text-align: center;
     font-size: 18px;
@@ -94,7 +94,7 @@ ul, ol {
     line-height: 160%;
     margin-bottom: 60px;
 }
-.inner-box>.text-box>h3{
+.h3-text-box{
     color: #000;
     font-size: 32px;
     font-style: normal;
@@ -102,7 +102,7 @@ ul, ol {
     line-height: 130%;
     margin: 30px 0 10px 30px;
 }
-.inner-box>.text-box>p{
+.p-text-box{
     color: #000;
     font-size: 16px;
     font-style: normal;
@@ -110,7 +110,7 @@ ul, ol {
     line-height: 160%;
     margin: 0 30px 20px 30px;
 }
-.inner-box>.text-box>a{
+.a-text-box{
     color: #FF4B32;
     font-size: 16px;
     font-style: normal;
