--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 601px) and ( max-width:1100px)
 /*------------------------header-------------------------*/
 
 
@@ -7,7 +8,26 @@
 
 /*---------------------Первая часть----------------------*/
 /*---------------------Вторая часть----------------------*/
+{
+    .one{
+        width:100vw;
+        text-align: center;
+    }
+    .two{
+       width:100vw;
+        text-align: center;
+        padding: 0 50px;
+    }
 
+    .images{
+        display:flex;
+        flex-direction: column;
+
+    }
+    .images>img{
+        width:72vw;
+    }
+}
 
 /*---------------------Вторая часть----------------------*/
 /*---------------------Третья часть----------------------*/
