--- a/css/main.css
+++ b/css/main.css
@@ -56,10 +56,12 @@ ul, ol {
     font-weight: 700;
     line-height: 1.3;
 
+    width: 140px;
+
     color: #FF4B32;
 }
 
-.logo > .logo-icon {
+.logo-icon {
     width: 50px;
     height: 50px;
 }
@@ -302,6 +304,11 @@ ul, ol {
     background-color: #ff4b32;
 
     transition: background-color 0.4s;
+}
+
+.footer-icon {
+    width: 38px;
+    height: 38px;
 }
 
 .copyright {
