--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ ul, ol {
 /*---------------------Четвертая часть-------------------*/
 .news>.general-width{
     height: 100vh;
-    /*padding: 152px 0 141px 0;*/
+    padding: 152px 0 0 0;
     text-align: center;
 }
 .box-news{
@@ -118,7 +118,9 @@ ul, ol {
     line-height: 160%;
     margin: 0 30px 30px 30px;
 }
-
+.a-text-box:hover{
+    color: saddlebrown;
+}
 /*---------------------Четвертая часть-------------------*/
 /*-------------------------Footer------------------------*/
 
