--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 .wrapper{
     max-width: 1440px;
     min-height: 100%;
-    margin: 0 0 auto;
+    margin: auto;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -17,6 +17,7 @@ body {
 .general-width {
     width: 80vw;
     margin-left: 10vw;
+    margin-right: 10vw;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: "Josefin Sans", sans-serif;
@@ -37,21 +38,18 @@ ul, ol {
     color: #ff4b32;
     transition: color 0.4s;
 }
-
 .header {
     position: absolute;
     left: 0;
     right: 0;
     margin-top: 38px;
 }
-
 .header-inner {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 55px;
 }
-
 .logo {
     display: flex;
     align-items: center;
@@ -59,35 +57,28 @@ ul, ol {
     font-size: 1.5em;
     font-weight: 700;
     line-height: 1.3;
-
     width: 140px;
-
     color: #FF4B32;
 }
-
 .logo-icon {
     width: 50px;
     height: 50px;
 }
-
 .menu {
     display: flex;
     gap: 55px;
 }
-
 .menu-item {
     min-width: 85px;
     display: flex;
     justify-content: center;
 }
-
 .menu-link {
     font-size: 1.125em;
     line-height: 1.6;
     opacity: 0.6;
     color: #fff;
 }
-
 .menu-link:hover,
 .menu-link:focus {
     font-weight: 700;
@@ -109,21 +100,15 @@ ul, ol {
     background-repeat: no-repeat;
     background-position: right;
 }
-
 .hero-inner {
     display: flex;
     flex-direction: column;
-
 }
-
 .hero-content {
     max-width: 525px;
 }
-
 .hero-title {
     font-size: calc(2.4vw + 24px);
-    /*font-size: calc(24px + (58 - 24) * ((100vw - 375px) / (1920 - 375)));*/
-    /*font-size: 3.625em;*/
     font-weight: 500;
     line-height: 1.2;
     margin-bottom: 26px;
@@ -173,7 +158,7 @@ ul, ol {
     font-size: 43px;
     font-style: normal;
     font-weight: 600;
-    line-height: 130%; /* 55.9px */
+    line-height: 130%;
     letter-spacing: .6rem;
 }
 .p-offer{
@@ -183,9 +168,10 @@ ul, ol {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 160%; /* 28.8px */
+    line-height: 160%;
 }
 .img-offer{
+    max-width: 1146px;
     margin-top: 4vh;
     display: flex;
     flex-direction: row;
@@ -203,7 +189,7 @@ ul, ol {
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
-    line-height: 150%; /* 36px */
+    line-height: 150%;
 }
 .span-offer-right{
     margin-top: 6vh;
@@ -212,7 +198,7 @@ ul, ol {
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
-    line-height: 150%; /* 36px */
+    line-height: 150%;
 }
 .h3-offer{
     color: #000;
@@ -220,7 +206,7 @@ ul, ol {
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
-    line-height: 130%; /* 41.6px */
+    line-height: 130%;
 }
 .p-img-offer-1{
     margin-top: 4vh;
@@ -229,7 +215,7 @@ ul, ol {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 160%; /* 25.6px */
+    line-height: 160%;
 }
 .p-img-offer {
     color: #000;
@@ -242,12 +228,12 @@ ul, ol {
 
 /*---------------------Первая часть----------------------*/
 /*---------------------Вторая часть----------------------*/
-.main-gallery{ /*в браузере без вложенности не работает*/
+.main-gallery{
+    max-width: 1146px;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /*margin:85px;*/
 }
 .one{
     color: #000;
@@ -256,7 +242,7 @@ ul, ol {
     font-size: 43px;
     font-style: normal;
     font-weight: 600;
-    line-height: 130%; /* 55.9px */
+    line-height: 130%;
 }
 .two{
     width: 609px;
@@ -265,13 +251,14 @@ ul, ol {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 160%; /* 28.8px */
+    line-height: 160%;
     opacity: 0.7;
 }
 .images{
+    max-width: 1146px;
     flex-shrink: 0;
-    width:100vw;
-    padding:20px;
+    /*width:100vw;*/
+    /*padding:20px;*/
     margin: 35px 0;
     display:flex;
     justify-content:center;
@@ -280,14 +267,15 @@ ul, ol {
     gap: 30px;
 }
 .three{
-    /*text-decoration: none;*//*a*/
     color: #FF4B32;
     text-align: center;
-    /*font-family: "Open Sans", sans-serif;*//*class body*/
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 27px */
+}
+.three:hover{
+    color: saddlebrown;
 }
 
 /*---------------------Вторая часть----------------------*/
@@ -296,12 +284,14 @@ ul, ol {
 
 /*---------------------Третья часть----------------------*/
 /*---------------------Четвертая часть-------------------*/
-.news>.general-width{
+
+.main-news{
     height: 100vh;
-    padding: 152px 0 141px 0;
+    padding: 152px 0 0 0;
     text-align: center;
 }
 .box-news{
+    max-width: 1146px;
     width: 80vw;
     height: 52vh;
     display: flex;
@@ -309,12 +299,13 @@ ul, ol {
     align-items: center;
 }
 .inner-box{
-    width: 25vw;
-    height: 52vh;
+    /*width: 25vw;*/
+    /*height: 52vh;*/
     border-radius: 20px;
     background: #FFF;
     box-shadow: 40px 15px 136px 0 rgba(0, 0, 0, 0.20);
     display: flex;
+    /*flex-wrap: wrap;*/
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -375,6 +366,9 @@ ul, ol {
     line-height: 160%;
     margin: 0 30px 30px 30px;
 }
+.a-text-box:hover{
+    color: saddlebrown;
+}
 
 /*---------------------Четвертая часть-------------------*/
 /*-------------------------Footer------------------------*/
@@ -382,7 +376,6 @@ ul, ol {
 
 .footer {
     min-height: 40vh;
-
     background-color: #0D0402;
     background-image: url(/img/svg/bg-footer.svg);
 }
@@ -395,7 +388,6 @@ ul, ol {
 .footer-wrap {
     display: flex;
     justify-content: space-evenly;
-
     margin-bottom: 70px;
 }
 
@@ -403,7 +395,6 @@ ul, ol {
     display: flex;
     flex-direction: column;
     gap: 30px;
-
     margin-top: 60px;
 }
 
@@ -411,9 +402,7 @@ ul, ol {
     font-size: 1.125rem;
     line-height: 1.6;
     font-weight: 400;
-
     width: 250px;
-
     color: #fff;
 }
 
@@ -421,18 +410,15 @@ ul, ol {
     display: flex;
     align-items: center;
     gap: 10px;
-
     font-size: 1.125rem;
     font-weight: 400;
     line-height: 1.5;
-
     color: #fff;
 }
 
 .tel:hover svg path,
 .tel:focus svg path {
     fill: #ff4b32;
-
     transition: fill 0.4s;
 }
 
@@ -441,9 +427,7 @@ ul, ol {
     justify-content: space-between;
     flex-direction: column;
     gap: 20px;
-
     width: 165px;
-
     margin-top: 80px;
 }
 
@@ -452,14 +436,12 @@ ul, ol {
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 1.5;
-
     color: #fff;
 }
 
 .footer-link {
     font-size: 1.125rem;
     line-height: 1.5;
-
     color: #fff;
 }
 
@@ -471,7 +453,6 @@ ul, ol {
     display: flex;
     align-items: center;
     gap: 30px;
-
     margin-top: 45px;
 }
 
@@ -479,7 +460,6 @@ ul, ol {
     display: flex;
     justify-content: center;
     align-items: center;
-
     border-radius: 50%;
 }
 
@@ -488,11 +468,8 @@ ul, ol {
     display: flex;
     justify-content: center;
     align-items: center;
-
     border-radius: 50%;
-
     background-color: #ff4b32;
-
     transition: background-color 0.4s;
 }
 
@@ -504,7 +481,6 @@ ul, ol {
 .copyright {
     display: flex;
     justify-content: center;
-
     margin-bottom: 50px;
 }
 
