--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ ul, ol {
 
 /*---------------------Первая часть----------------------*/
 /*---------------------Вторая часть----------------------*/
-.gallery>.general-width{ /*в браузере без вложенности не работает*/
+.main-gallery{ /*в браузере без вложенности не работает*/
     display:flex;
     flex-direction: column;
     justify-content: center;
