create news.html Nadia

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ ul, ol {
 
 /*---------------------Третья часть----------------------*/
 /*---------------------Четвертая часть-------------------*/
-.news>.general-width{
+.main-news{
     height: 100vh;
     padding: 152px 0 0 0;
     text-align: center;
