--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,8 @@ body {
 }
 .general-width {
     width: 80vw;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: "Josefin Sans", sans-serif;
@@ -284,46 +284,43 @@ ul, ol {
 
 /*---------------------Третья часть----------------------*/
 /*---------------------Четвертая часть-------------------*/
-
-.main-news{
+.news {
     height: 100vh;
-    padding: 152px 0 0 0;
+    display: flex;
     text-align: center;
 }
-.box-news{
-    max-width: 1146px;
-    width: 80vw;
-    height: 52vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.main-news{
+    /*height: 100vh;*/
+    padding: 152px 0 0 0;
+    /*text-align: center;*/
 }
-.inner-box{
-    /*width: 25vw;*/
+.box-news{
+    /*max-width: 1146px;*/
+    /*width: 80vw;*/
     /*height: 52vh;*/
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*align-items: center;*/
+    margin-top: 4vh;
+    display: flex;
+    flex-direction: row;
+}
+.inner-box1, .inner-box2{
+    text-align: left;
+    width: 362px;
+    height: 536px;
+    margin: 0 30px 0 0;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 40px 15px 136px 0 rgba(0, 0, 0, 0.20);
-    display: flex;
-    /*flex-wrap: wrap;*/
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
-.inner-box img{
-    width: 25vw;
-    height: 29vh;
-}
-.inner-box:nth-child(1){
-    margin-right: 30px;
-}
-.inner-box:nth-child(2){
-    margin-right: 30px;
-}
-.text-box{
-    width: 25vw;
-    height: 23vh;
+.inner-box3{
     text-align: left;
+    width: 362px;
+    height: 536px;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 40px 15px 136px 0 rgba(0, 0, 0, 0.20);
 }
 .h2-news{
     color: #000;
