--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,11 +8,11 @@
 
 /*---------------------Первая часть----------------------*/
 /*---------------------Вторая часть----------------------*/
-.one{
+.h1-gallery{
     width:100vw;
     text-align: center;
 }
-.two{
+.p-gallery{
     width:100vw;
     text-align: center;
     padding: 20px;
