--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,11 +9,11 @@
 /*---------------------Первая часть----------------------*/
 /*---------------------Вторая часть----------------------*/
 {
-    .one{
+    .h1-gallery{
         width:100vw;
         text-align: center;
     }
-    .two{
+    .p-gallery{
        width:100vw;
         text-align: center;
         padding: 0 50px;
