--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,21 @@ body {
     width: 100vw;
     font-family: "Open Sans", sans-serif;
 }
+.wrapper{
+    max-width: 1440px;
+    min-height: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
 .general-width {
-    width: 80vw;
-    margin-left: 10vw;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    margin-left: 10%;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: "Josefin Sans", sans-serif;
@@ -55,8 +67,6 @@ ul, ol {
     font-size: 1.5em;
     font-weight: 700;
     line-height: 1.3;
-
-    width: 140px;
 
     color: #FF4B32;
 }
@@ -173,7 +183,7 @@ ul, ol {
 /*------------------------header-------------------------*/
 /*---------------------Первая часть----------------------*/
 .offer{
-    height: 90vh;
+    /*height: 90vh;*/
 }
 .h2-offer{
     margin-top: 10vh;
@@ -195,10 +205,12 @@ ul, ol {
     line-height: 160%; /* 28.8px */
 }
 .img-offer{
+    max-width: 1146px;
     margin-top: 4vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
 }
 .img-offer-left, .img-offer-center, .img-offer-right{
     width: 30%;
@@ -251,95 +263,166 @@ ul, ol {
 
 /*---------------------Первая часть----------------------*/
 /*---------------------Вторая часть----------------------*/
-.main-gallery{ /*в браузере без вложенности не работает*/
+.gallery{ /*в браузере без вложенности не работает*/
     display:flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /*margin:85px;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    text-align: center;
+    height: 100vh;
 }
+/*.main-gallery{*/
+/*    text-align: center;*/
+/*}*/
 .h1-gallery{
     color: #000;
-
-    text-align: center;
-
-    /*font-family: "Josefin Sans", sans-serif;*//*h1*/
     font-optical-sizing: auto;
-    /* Subtitle / Base */
     font-size: 43px;
     font-style: normal;
     font-weight: 600;
-    line-height: 130%; /* 55.9px */
-
+    line-height: 130%;
+    margin-bottom: 20px;
 }
 .p-gallery{
-    width: 609px;
+    text-align: center;
     color: #000;
-
-    /*font-family: "Open Sans", sans-serif;*//*class body*/
-    /*font-optical-sizing: auto;*/
-    /*font-variation-settings: "wdth" 100;*/
-
-    text-align: center;
-    /*display:flex;*/
-    /*justify-content: center;*/
-
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 160%; /* 28.8px */
-
+    line-height: 160%;
     opacity: 0.7;
+    margin-bottom: 60px;
 }
-.images{
-    /* width: 1440px;
-     height: 650px;*/
-
-    flex-shrink: 0;
-    width:100vw;
-    padding:20px;
-    margin: 35px 0;
-
+.images-box{
+    /*max-width: 1146px;*/
+    /*height: 58vh;*/
     display:flex;
-    justify-content:center;
-    align-content: center;
+    /*justify-content:center;*/
+    /*align-content: center;*/
+    /*flex-direction: row;*/
     flex-wrap:wrap;
-
-    gap: 30px;
+    margin-bottom: 75px;
+    column-gap: 30px;
+    row-gap: 30px;
 }
-img{
-    /*width: 1440px;
-    height: 650px;*/
-    /*width: 362px;*/
-    /*height: 330px;*/
-    flex-shrink: 0;
-    width:25vw;
-    margin:2px;
-
-}
+/*img{*/
+/*    width:25vw;*/
+/*}*/
+/*.big-img{*/
+/*    height: 32vh;*/
+/*}*/
+/*.small-img{*/
+/*    height: 22vh;*/
+/*}*/
 .a-gallery{
-    /*text-decoration: none;*//*a*/
     color: #FF4B32;
-
-    text-align: center;
-    /*font-family: "Open Sans", sans-serif;*//*class body*/
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 150%; /* 27px */
+    line-height: 150%;
 }
 .a-gallery:hover{
     color: saddlebrown;
 }
-
 /*---------------------Вторая часть----------------------*/
 /*---------------------Третья часть----------------------*/
+.follow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    height: 43vh;
+
+    padding: 100px 0;
+
+    background-color: #000;
+    background-image: url(/img/image/bg-follow.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.follow-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.follow-content > .social-list {
+    margin-top: 30px;
+}
+
+.follow-subtitle {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.5em;
+    font-weight: 600;
+    line-height: 1.5;
+
+    margin-bottom: 65px ;
+
+    color: #ff4b32;
+}
+
+.follow-title {
+    font-weight: 600;
+    line-height: 1.3;
+    text-align: center;
+
+    margin-bottom: 60px;
+
+    color: #fff;
+}
+
+.follow-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+
+.follow-link-tel,
+.follow-link-mail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+
+    font-size: 1.5em;
+    line-height: 1.5;
+
+    color: #fff;
+}
+
+.follow-link:hover,
+.follow-link:focus {
+    color: #ff4b32;
+
+    transition: color 0.4s;
+}
+
+.follow-link-tel:hover path,
+.follow-link-tel:focus path {
+    fill: #ff4b32;
+    transition: fill 0.4s;
+}
+
+.follow-link-mail:hover path,
+.follow-link-mail:focus path {
+    stroke: #ff4b32;
+
+    transition: stroke 0.4s;
+}
+
+.social-icon {
+    width: 50px;
+    height: 50px;
+}
 
 /*---------------------Третья часть----------------------*/
 /*---------------------Четвертая часть-------------------*/
 .news, .main-news {
-    max-width: 1440px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -397,7 +480,6 @@ img{
 }
 .p-news{
     color: #000;
-    text-align: center;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -431,6 +513,7 @@ img{
 .a-text-box:hover{
     color: saddlebrown;
 }
+
 
 /*---------------------Четвертая часть-------------------*/
 /*-------------------------Footer------------------------*/
