--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: "Josefin Sans", sans-serif;
 }
-.copyright-footer{
-    font-family: Poppins, sans-serif;
-    color: #fff;
-}
 a {
     text-decoration: none;
 }
@@ -135,7 +131,7 @@ ul, ol {
 }
 
 .hero-text {
-    font-size: 1.25rem;
+    font-size: calc(0.28vw + 16px);
     font-weight: 600;
     line-height: 1.6;
     margin-bottom: 48px;
@@ -150,6 +146,7 @@ ul, ol {
     line-height: 1.6;
     cursor: pointer;
     padding: 16px 35px;
+    border: none;
     border-radius: 5px;
     color: #fff;
     background-color: #FF4B32;
@@ -325,6 +322,7 @@ ul, ol {
 }
 
 .follow-title {
+    font-size: calc(1.46vw + 22px);
     font-weight: 600;
     line-height: 1.3;
     text-align: center;
@@ -470,8 +468,14 @@ ul, ol {
 
 .footer {
     min-height: 40vh;
+
     background-color: #0D0402;
     background-image: url(/img/svg/bg-footer.svg);
+}
+
+.wrap {
+    max-width: 1146px;
+    margin: 0 auto;
 }
 
 .footer-inner {
@@ -481,7 +485,7 @@ ul, ol {
 
 .footer-wrap {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-bottom: 70px;
 }
 
@@ -576,6 +580,11 @@ ul, ol {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
+}
+.text-copyright {
+    font-family: Poppins, sans-serif;
+    line-height: 1.6;
+    color: #fff;
 }
 
 /*-------------------------Footer------------------------*/
