--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 .wrapper{
-    max-width: 1440px;
+    width: 1440px;
     min-height: 100%;
     margin: 0 auto;
     overflow: hidden;
@@ -18,10 +18,8 @@ body {
     width: 80%;
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
-    /*align-items: center;*/
     margin-left: 10%;
-    /*margin-right: 10%;*/
+    margin-right: 10%;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: "Josefin Sans", sans-serif;
@@ -45,7 +43,6 @@ ul, ol {
     position: absolute;
     left: 0;
     right: 0;
-
     margin-top: 38px;
 }
 
@@ -60,11 +57,9 @@ ul, ol {
     display: flex;
     align-items: center;
     gap: 10px;
-
     font-size: 1.5em;
     font-weight: 700;
     line-height: 1.3;
-
     color: #FF4B32;
 }
 
@@ -245,9 +240,7 @@ ul, ol {
 .gallery{
     margin-top: 20vh;
     display:flex;
-    flex-direction: column;
     text-align: center;
-    height: 100vh;
 }
 .h1-gallery{
     color: #000;
@@ -259,7 +252,6 @@ ul, ol {
     margin-bottom: 20px;
 }
 .p-gallery{
-    text-align: center;
     color: #000;
     font-size: 18px;
     font-style: normal;
@@ -375,11 +367,12 @@ ul, ol {
 /*---------------------Третья часть----------------------*/
 /*---------------------Четвертая часть-------------------*/
 .news, .main-news{
-    height: 100vh;
+    height: 100%;
+    margin-bottom: 3%;
     display: flex;
     align-items: center;
     text-align: center;
-    padding: 152px 0 0 0;
+    margin-top: 5%;
 }
 .box-news{
     max-width: 1146px;
@@ -468,7 +461,6 @@ ul, ol {
 
 .footer {
     min-height: 40vh;
-
     background-color: #0D0402;
     background-image: url(/img/svg/bg-footer.svg);
 }
